deploy/kubernetes/server/gva-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gva-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.gin-vue-admin.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gva-server
              port:
                number: 8888
